Gateway-service.yaml
  GNU nano 6.2                                                                                                  gateway.yaml                                                                                                           
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpd-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-vs
spec:
  hosts:
    - "*"
  gateways:
    - httpd-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: httpd-service
            port:
              number: 80
